# tinyosc

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  appveyor.yml  readme.md  sample_main.cpp  tinyosc-net.hpp  tinyosc.cpp  tinyosc.hpp  tinyosc.sln  tinyosc.vcxproj  tinyosc.vcxproj.filters  tinyosc_dry.cpp
